--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h1>Welcome to my website</h1>
-  <h2>Marshall's Blog</h2>
+  <h2>Marshall's Video Games Blog</h2>
   <p>Now hosted on Amazon S3!</p>
 </body>
 </html>
